Fix issue with var in the login page

--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -7,5 +7,5 @@
 
 @code
 {
-    var message = "This is the login page. You can implement your login logic here.";
+    string message = "This is the login page. You can implement your login logic here.";
 }
